add put method and app.ts
