# company_z/company_api/src/routes.ts
@@ -1,5 +1,5 @@
 import { Router, Request, Response } from 'express';
-import { deleteCompany, findById, getCompanies, saveCompany } from './controller/CompanyConroller';
+import { deleteCompany, findById, getCompanies, saveCompany, updateCompany } from './controller/CompanyConroller';
 
 const routes = Router();
 
@@ -8,6 +8,7 @@ routes.get('/test', (req:Request, resp:Response) => resp.json({ msg: "It's works
 routes.get('/companies', getCompanies);
 routes.get('/companies/:id', findById);
 routes.delete('/companies/:id',deleteCompany);
+routes.put('/companies/:id',updateCompany);
 routes.post('/companies', saveCompany);
 
 export default routes;
